--- a/knockout.pager.css
+++ b/knockout.pager.css
@@ -1,64 +1,102 @@
-div.pager {
-    padding: 3px;
-    text-align: right;
+.pager {
+  margin: 10px 0;
 }
 
-div.pager-size {
-    padding: 3px;
-    text-align: left;
+.pager.full, .pager.mini {
+  display: none;
 }
 
-a.pager-button, a.pager-button:before, a.pager-button:after {
-    cursor: pointer;
+.pager span {
+  cursor: default;
 }
 
-div.pager a.selected, div.pager a.selected:hover, div.pager a.selected:active {
-    color: #dfd;
-    background: #666;
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#666', endColorstr='#333', GradientType=0 );
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, color-stop(20%, #666), color-stop(90%, #333));
-    background-image: -webkit-linear-gradient(top, #666 20%, #333 90%);
-    background-image: -moz-linear-gradient(top, #666 20%, #333 90%);
-    background-image: -o-linear-gradient(top, #666 20%, #333 90%);
-    background-image: linear-gradient(#666 20%, #333 90%);
+.number-of-pages {
+  -moz-box-shadow: 0 1px 1px 0 #e2e0e0;
+  -webkit-box-shadow: 0 1px 1px 0 #e2e0e0;
+  box-shadow: 0 1px 1px 0 #e2e0e0;
+  border-radius: 15px;
+  font-weight: bold;
+  line-height: 30px;
+  margin-left: 3px;
+  text-align: center;
+  padding-left: 16px;
+  padding-right: 16px;
+  display: inline-block;
+  height: 30px;
+  background-color: #FFFFFF;
+  color: #8d8d8d;
 }
-div.pager a.disabled, div.pager a.disabled:hover, div.pager a.disabled:active
-{
-    color: #666;
-    text-decoration: none;
-    border-radius: 3px;
-    margin: 2px;
-    padding: 1px 3px;
-    background: #eee;
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eee', endColorstr='#ddd', GradientType=0 );
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, color-stop(20%, #eee), color-stop(90%, #ddd));
-    background-image: -webkit-linear-gradient(top, #eee 20%, #ddd 90%);
-    background-image: -moz-linear-gradient(top, #eee 20%, #ddd 90%);
-    background-image: -o-linear-gradient(top, #eee 20%, #ddd 90%);
-    background-image: linear-gradient(#eee 20%, #ddd 90%);
+
+.pager a {
+  -moz-box-shadow: 0 1px 1px 0 #e2e0e0;
+  -webkit-box-shadow: 0 1px 1px 0 #e2e0e0;
+  box-shadow: 0 1px 1px 0 #e2e0e0;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  color: #e8112d;
+  background-color: #ffffff;
+  font-weight: bold;
+  line-height: 26px;
+  margin-left: 3px;
+  text-align: center;
+  padding: 0;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
 }
-div.pager a
-{
-    color: black;
-    text-decoration: none;
-    border-radius: 3px;
-    margin: 2px;
-    padding: 1px 3px;
-    background: #eee;
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eee', endColorstr='#ccc', GradientType=0 );
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, color-stop(20%, #eee), color-stop(90%, #ccc));
-    background-image: -webkit-linear-gradient(top, #eee 20%, #ccc 90%);
-    background-image: -moz-linear-gradient(top, #eee 20%, #ccc 90%);
-    background-image: -o-linear-gradient(top, #eee 20%, #ccc 90%);
-    background-image: linear-gradient(#eee 20%, #ccc 90%);
+
+.pager a.selected, 
+.pager a.selected:hover, 
+.pager a.selected:active, 
+.pager a.selected:focus {
+  z-index: 2;
+  color: #fff;
+  cursor: default;
+  background-color: #337ab7;
+  border-color: #337ab7;
 }
-div.pager a:hover, div.pager a:active
-{
-    background: #ccc;
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ccc', endColorstr='#eee', GradientType=0 );
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, color-stop(20%, #ccc), color-stop(90%, #eee));
-    background-image: -webkit-linear-gradient(top, #ccc 20%, #eee 90%);
-    background-image: -moz-linear-gradient(top, #ccc 20%, #eee 90%);
-    background-image: -o-linear-gradient(top, #ccc 20%, #eee 90%);
-    background-image: linear-gradient(#ccc 20%, #eee 90%);
+
+.pager a.disabled, 
+.pager a.disabled:hover, 
+.pager a.disabled:active, 
+.pager a.disabled:focus, 
+.pager a.disabled:before, 
+.pager a.disabled:after {
+  z-index: 2;
+  cursor: default;
+  background-color: transparent;
+  border-color: #ccc;
+  color: #ccc;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+.pager a:active, .pager a:hover {
+  background-color: #fff;
+  border-color: #337ab7;
+  color: #337ab7;
+}
+
+.pager .fa-chevron-left:before {
+    margin-left: -2px;
+}
+
+.pager .fa-chevron-right:before {
+    margin-right: -2px;
+}
+
+@media (max-width: 599px) {
+  .pager.mini {
+    display: block;
+  }
+}
+
+@media (min-width: 600px) {
+  .pager.full {
+    display: block;
+  }
 }
